   split off from #9118 by Kate Deplaix, report by Ricardo M. Correia)

- #10488: Improve type variable name generation and recursive type detection
  when printing type errors; this ensures that the names given to type variables
  are always reused in the following portion of the trace and also removes
  spurious `as 'a`s in types.
  (Antal Spector-Zabusky, review by Florian Angeletti)

### Internal/compiler-libs changes:

- #1599: add unset directive to ocamltest to clear environment variables before
  running tests.
  (David Allsopp, review by Damien Doligez and Sébastien Hinderer)

- #8516: Change representation of class signatures
  (Leo White, review by Thomas Refis)

- #9444: -dtypedtree, print more explictly extra nodes in pattern ast.
  (Frédéric Bour, review by Gabriel Scherer)

- #10337: Normalize type_expr nodes on access
  One should now use accessors such as get_desc and get_level to access fields
  of type_expr, rather than calling manually Btype.repr (which is now hidden
  in Types.Transient_expr).
  (Jacques Garrigue and Takafumi Saikawa,
   review by Florian Angeletti and Gabriel Radanne)

- #10474: Force normalization on access to row_desc
  Similar to #10337. Make row_desc an abstract types, with constructor
  create_row and accessors defined in Types rather than Btype.
  A normalized view row_desc_repr is provided for convenience.
  (Jacques Garrigue and Takafumi Saikawa,
   review by Leo White and Florian Angeletti)

- #10541: Make field_kind and commutable abstract, enforcing correct access
  (Jacques Garrigue and Takafumi Saikawa,
   review by Thomas Refis and Florian Angeletti)

- #10575: add a -dump-dir flag, which redirects all debugging printer
   (`-dprofile`, `-dlambda`, ...) to the target directory
  (Florian Angeletti, review by Thomas Refis and Gabriel Scherer)

* #10627: Make row_field abstract
  Completes #10474 by making row_field abstract too.
  An immutable view row_field_view is provided, and one converts between it